[package]
name = "sharp_pencil"
version = "0.4.3"
authors = ["Shipeng Feng <fsp261@gmail.com>", "Pyry Kontio <pyry.kontio@drasa.eu>"]
keywords = ["web", "framework", "server", "http"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/golddranks/sharp_pencil"
homepage = "https://github.com/golddranks/sharp_pencil"
documentation = "http://fengsp.github.io/pencil/"
description = "A micro web framework for Rust. (A Pencil fork)"
categories = ["web-programming::http-server"]
edition = "2018"

[dependencies]
regex = "1"
serde = "1"
serde_json = "1"
url = "2"
log = "0.4"
handlebars = { version = "3" }
typemap = "0.3.3"
mime = "0.3"
mime_guess = "2"
hyper = "0.13"
headers = "0.3"
multipart = { version = "0.17", default-features = false, features = ["server"] }
lazycell = "1"
time = "0.2"
futures-util = "0.3.5"
futures = "0.3"
