[package]
name = "sharp_pencil"
version = "0.5.0"
authors = ["Shipeng Feng <fsp261@gmail.com>", "Pyry Kontio <pyry.kontio@drasa.eu>"]
keywords = ["web", "framework", "server", "http"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/golddranks/sharp_pencil"
homepage = "https://github.com/golddranks/sharp_pencil"
documentation = "http://fengsp.github.io/pencil/"
description = "A micro web framework for Rust. (A Pencil fork)"
categories = ["web-programming::http-server"]

[dependencies]
regex = "1.3.9"
serde = "1.0.116"
serde_json = "1.0.57"
url = "1.2.1"
log = "0.4.11"
handlebars = "3.5.0"
typemap = "0.3.3"
mime = "0.2.2"
mime_guess = "1.8.0"
hyper = "0.10"
formdata = "0.13.0"
lazycell = "1.3.0"
time = "0.1"
notify = "5.0.0-pre.3"